# TrampoFinder

./: .env.example  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
BackEnd/CoreAPI/: package-lock.json  package.json
BackEnd/DeliveryAPI/: .env.example  pyproject.toml
BackEnd/DeliveryAPI/infrastructure/: Dockerfile
BackEnd/DeliveryAPI/src/: main.py
BackEnd/DeliveryAPI/src/config/: PikaConfig.py
BackEnd/DeliveryAPI/src/config/settings/: AppSettings.py  DatabaseSettings.py  RabbitMQSettings.py  Settings.py  SwaggerSettings.py
BackEnd/DeliveryAPI/src/configs/dependency_injector/: Gateways.py
BackEnd/DeliveryAPI/src/configs/settings/: AppSettings.py  DatabaseSettings.py  GlobalSettings.py  RabbitMQSettings.py  Settings.py  SwaggerSettings.py  TelethonSettings.py
BackEnd/DeliveryAPI/src/resources/: PikaResource.py
BackEnd/DeliveryAPI/src/services/: PikaService.py
BackEnd/DeliveryAPI/src/settings/: AppSettings.py  DatabaseSettings.py  GlobalSettings.py  RabbitMQSettings.py  Settings.py  SwaggerSettings.py
BackEnd/GatewayAPI/: Dockerfile  go.mod  go.sum
BackEnd/GatewayAPI/cmd/: main.go
BackEnd/GatewayAPI/internal/database/: database.go  mongorm.go
BackEnd/GatewayAPI/internal/route/: model.go  repository.go
BackEnd/GatewayAPI/routes/: route.go
BackEnd/TextProcessorAPI/: main.py
FrontEnd-React/: .env  .env.example  package-lock.json  package.json  vite.config.ts
FrontEnd-React/api/: index.ts
FrontEnd-React/api/config/: index.tsx
FrontEnd-React/src/: layout.tsx  layoutnew.tsx  main.tsx
FrontEnd-React/src/routes/: root.tsx
(+13 files in other folders)
